--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
+    <div class="buffer">
+        <div class="pc-container">
+            <div class="pc-status"> Computer </div>
+            <div id="pc-score"> 0 </div>
+        </div>
+
+        <div class="container">
+            <div id="display-panel">
+                Rock Paper Scissors
+            </div>
+
+            <div class="selection-panel">
+                <button id="rock">Rock</button>
+                <button id="paper">Paper</button>
+                <button id="scissors">Scissors</button>
+            </div>
+        </div>
+
+        <div class="player-container">
+            <div class="player-status"> Player </div>
+            <div id="player-score"> 0 </div>
+        </div>
+
+    </div>
 </body>
+<script type="text/javascript" src="script.js"></script>
 </html>
